--- a/src/main/java/Test/Reservation_List.form
+++ b/src/main/java/Test/Reservation_List.form
@@ -124,10 +124,10 @@
           <Properties>
             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
               <Table columnCount="7" rowCount="0">
-                <Column editable="true" title="&#xbc29; &#xbc88;&#xd638;" type="java.lang.Integer"/>
+                <Column editable="true" title="&#xbc29; &#xbc88;&#xd638;" type="java.lang.String"/>
                 <Column editable="true" title="&#xc774;&#xb984;" type="java.lang.String"/>
                 <Column editable="true" title="&#xc804;&#xd654;&#xbc88;&#xd638;" type="java.lang.String"/>
-                <Column editable="true" title="&#xc778;&#xc6d0; &#xc218;" type="java.lang.Integer"/>
+                <Column editable="true" title="&#xc778;&#xc6d0; &#xc218;" type="java.lang.String"/>
                 <Column editable="true" title="&#xccb4;&#xd06c;&#xc778; &#xc2dc;&#xac04;" type="java.lang.String"/>
                 <Column editable="true" title="&#xccb4;&#xd06c;&#xc544;&#xc6c3; &#xc2dc;&#xac04;" type="java.lang.String"/>
                 <Column editable="true" title="&#xacb0;&#xc81c; &#xbc29;&#xbc95;" type="java.lang.String"/>
